--- a/login/templates/financiera.html
+++ b/login/templates/financiera.html
@@ -8,11 +8,8 @@
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
-    <style>
-        .ui-datepicker-calendar {
-            display: none;
-        }
-    </style>
+
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
 </head>
 
 <body>
@@ -26,7 +23,7 @@
 
     <div>
         <button id="export-pdf">Exportar a PDF</button>
-        <button id="export-excel">Exportar a Excel</button>
+        <a id="export-excel" href="{% url 'export_excel'%}">Exportar a Excel</a>
     </div>
     <div>
         <select id="grupo-granja-selector">
@@ -41,8 +38,8 @@
     </div>
 
     <div>
-        <label for="">BUSCAR: </label><input type="text" id="search-input"
-            placeholder="Buscar por Consecutivo Cercafe, Remisión o Cliente">
+        <label for="">BUSCAR POR CONSECUTIVO, REMISION O CLIENTE: </label><input type="text" id="search-input"
+            placeholder="Buscar ">
 
     </div>
 
@@ -72,13 +69,24 @@
         </tbody>
     </table>
     <input type="hidden" name="csrfmiddlewaretoken" value="{{ csrf_token }}">
-
+    <!-- Agrega la biblioteca jQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <!-- Agrega la biblioteca DataTables JS -->
+    <script type="text/javascript" charset="utf8"
+        src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery/latest/jquery.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
 
     <script>
         $(document).ready(function () {
             // Inicializar los datepickers
-            $("#datepicker-start").datepicker();
-            $("#datepicker-end").datepicker();
+            $("#datepicker-start").datepicker({
+                dateFormat: 'yy/mm/dd'
+            });
+            $("#datepicker-end").datepicker({
+                dateFormat: 'yy/mm/dd'
+            });
 
             // Al hacer clic en el botón Filtrar
             $("#filter-btn").click(function () {
@@ -104,6 +112,11 @@
                             $('#example1 tbody').append('<tr data-id="' + compromiso.Consecutivo_Cercafe + '"><td>' + compromiso.Fecha_transformacion + '</td><td>' + compromiso.Unidades + '</td><td>' + compromiso.Peso_canal_fria + '</td><td>' + compromiso.Consecutivo_Cercafe + '</td><td>' + compromiso.Codigo_granja + '</td><td>' + compromiso.Remision + '</td><td>' + compromiso.Valor + '</td><td>' + compromiso.Cliente + '</td><td>' + compromiso.Planta_Beneficio + '</td><td>' + compromiso.Granja + '</td><td>' + compromiso.Nit_asociado + '</td><td>' + compromiso.Asociado + '</td><td>' + compromiso.Grupo_Granja + '</td><td>' + compromiso.Retencion + '</td><td>' + compromiso.Valor_a_pagar_asociado + '</td> <td contenteditable=true class="editable">' + compromiso.Valor_kilo + '</td><td><button class="save-btn">Guardar</button></td></tr>');
 
                         });
+                        $('#example1').DataTable({
+                            "paging": true,
+                            "pageLength": 20
+                        });
+
                     }
                 });
             });
@@ -124,25 +137,25 @@
             });
         });
 
-        // Exportar a Excel
-        $("#export-excel").click(function () {
-            $.ajax({
-                url: '/export-excel/',
-                type: 'GET',
-                data: {
-                    start_date: $("#datepicker-start").val(),
-                    end_date: $("#datepicker-end").val(),
+        // // Exportar a Excel
+        // $("#export-excel").click(function () {
+        //     $.ajax({
+        //         url: '/export-excel/',
+        //         type: 'GET',
+        //         data: {
+        //             start_date: $("#datepicker-start").val(),
+        //             end_date: $("#datepicker-end").val(),
 
-                },
-                success: function (response) {
-                    // Descargar el archivo Excel
-                    var a = document.createElement('a');
-                    a.href = response.url;
-                    a.download = 'reporte.xlsx';
-                    a.click();
-                }
-            });
-        });
+        //         },
+        //         success: function (response) {
+        //             // Descargar el archivo Excel
+        //             var a = document.createElement('a');
+        //             a.href = response.url;
+        //             a.download = 'reporteaa.xlsx';
+        //             a.click();
+        //         }
+        //     });
+        // });
         $(document).ready(function () {
             // ... otros códigos
 
@@ -225,11 +238,19 @@
                     a.download = 'reporte_grupo_' + selectedGroup + '.xlsx';
                     a.click();
 
-                    
+
                 }
             });
         });
-        
+        $(document).ready(function () {
+            $('input[name="daterange"]').daterangepicker({
+                opens: 'left'
+            }, function (start, end, label) {
+                console.log("A new date selection was made: " + start.format('YYYY-MM-DD') + ' to ' + end.format('YYYY-MM-DD'));
+            });
+        });
+
+
 
     </script>
 </body>
