cambios carga de G_T y G_AB

--- a/login/templates/_main_sidebar.html
+++ b/login/templates/_main_sidebar.html
@@ -57,7 +57,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a id="cargarContenido" class="nav-link">
+                            <a id="cargarContenido" ref="{% url 'gestiontecnica' %}" class="nav-link">
                                 <i class="nav-icon fas fa-tractor"></i>Gestion Tecnica
                             </a>
                         </li>
@@ -67,7 +67,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a id="cargarContenido" class="nav-link">
+                            <a id="cargarContenido" ref="{% url 'gestionalbal' %}" class="nav-link">
                                 <i class="nav-icon fas fa-industry"></i>G- Alimento Balanceado
                             </a>
                         </li>
